<resources>
    <string name="app_name">Assignment_Two</string>
    <string name="upper_text">Upload Cover Photo</string>
    <string name="username">User Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="month">Month</string>
    <string name="day">Day</string>
    <string name="year">Year</string>
    <string name="getStarted">GET  STARTED</string>
    <string name="termsAndConditions">Terms and Conditions</string>
</resources>
