<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/background_blue"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/editText1"
        android:padding="10dp"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="37dp"
            android:layout_height="37dp"
            android:background="@drawable/icon_back"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/circle_person"
            app:layout_constraintEnd_toEndOf="@+id/camera_circle"
            tools:ignore="MissingConstraints" />

        <ImageView
            android:id="@+id/circle_person"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:background="@drawable/circle_person"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_back"/>

        <ImageView
            android:id="@+id/camera_circle"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/circle_camera"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/btn_back"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="2dp"
            tools:ignore="MissingConstraints" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            app:layout_constraintStart_toEndOf="@+id/camera_circle"
            app:layout_constraintTop_toTopOf="@+id/camera_circle"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/upper_text"
            android:textStyle="bold"
            android:textColor="@color/colorWhite"
            android:textSize="17sp"
            tools:ignore="MissingConstraints" />


    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/editText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/editText2"
        android:paddingTop="30dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingBottom="15dp"
        tools:ignore="MissingConstraints">
        <EditText
            android:id="@+id/username"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:background="@drawable/border"
            android:hint="@string/username"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/email"
            app:layout_constraintHorizontal_weight="1"
            android:padding="6dp"
            tools:ignore="MissingConstraints" />
        <EditText
            android:id="@+id/email"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:background="@drawable/border"
            android:layout_marginStart="10dp"
            android:hint="@string/email"
            app:layout_constraintStart_toEndOf="@+id/username"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="1"
            android:padding="6dp"
            tools:ignore="MissingConstraints" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingBottom="15dp"
        app:layout_constraintTop_toBottomOf="@+id/editText1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/editText3"
        tools:ignore="MissingConstraints">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/border"
            android:hint="@string/password"
            app:layout_constraintStart_toStartOf="parent"
            android:padding="6dp"
            tools:ignore="MissingConstraints" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/editText3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/editText2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/editText4"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingBottom="15dp"
        tools:ignore="MissingConstraints">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/border"
            android:hint="@string/confirmPassword"
            app:layout_constraintStart_toStartOf="parent"
            android:padding="6dp"
            tools:ignore="MissingConstraints" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/editText4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/editText3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btnGetStarted"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingBottom="30dp"
        tools:ignore="MissingConstraints">
        <EditText
            android:id="@+id/month"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:background="@drawable/border"
            android:hint="@string/month"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/day"
            app:layout_constraintHorizontal_weight="1"
            android:padding="6dp"
            tools:ignore="MissingConstraints" />
        <EditText
            android:id="@+id/day"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:background="@drawable/border"
            android:hint="@string/day"
            app:layout_constraintStart_toEndOf="@+id/month"
            app:layout_constraintEnd_toStartOf="@+id/year"
            app:layout_constraintHorizontal_weight="1"
            android:padding="6dp"
            android:layout_marginStart="10dp"
            tools:ignore="MissingConstraints" />
        <EditText
            android:id="@+id/year"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:background="@drawable/border"
            android:hint="@string/year"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/day"
            app:layout_constraintHorizontal_weight="1"
            android:padding="6dp"
            android:layout_marginStart="10dp"
            tools:ignore="MissingConstraints" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/btnGetStarted"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/editText4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/textTermsAndConditions"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingBottom="6dp"
        tools:ignore="MissingConstraints">
        <Button
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:background="@drawable/border"
            android:text="@string/getStarted"
            android:textColor="@android:color/white"
            android:backgroundTint="@color/background_blue"
            android:textSize="18dp"
            app:layout_constraintStart_toStartOf="parent"
            android:padding="6dp"
            tools:ignore="MissingConstraints" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/textTermsAndConditions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/btnGetStarted"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingBottom="15dp"
        tools:ignore="MissingConstraints">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/termsAndConditions"
            android:textColor="@color/background_blue"
            android:textSize="16dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            tools:ignore="MissingConstraints" />
    </androidx.constraintlayout.widget.ConstraintLayout>












</androidx.constraintlayout.widget.ConstraintLayout>





